--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "creditcards": "2.1.2",
     "cross-env": "5.1.1",
     "d3-array": "1.2.0",
+    "d3-axis": "1.0.8",
     "d3-scale": "1.0.6",
     "d3-selection": "1.1.0",
     "d3-shape": "1.2.0",
