Remove unnecessary changes from package.json

--- a/package.json
+++ b/package.json
@@ -211,8 +211,8 @@
     "docker": "docker run -it --name wp-calypso --rm -p 80:3000 wp-calypso",
     "env": "cross-env-shell NODE_PATH=$NODE_PATH:server:client:.",
     "eslint-branch": "node bin/eslint-branch.js",
-    "install-if-deps-outdated": "echo 1",
-    "install-if-no-packages": "echo 1",
+    "install-if-deps-outdated": "node bin/install-if-deps-outdated.js",
+    "install-if-no-packages": "node bin/install-if-no-packages.js",
     "lint": "run-s -s lint:*",
     "lint:config-defaults": "node server/config/validate-config-keys.js",
     "lint:css": "stylelint \"client/**/*.scss\" --syntax scss",
